wasm96-zig-sdk/src/main.zig

const std = @import("std");

/// Joypad button ids.
pub const Button = enum(u32) {
    b = 0,
    y = 1,
    select = 2,
    start = 3,
    up = 4,
    down = 5,
    left = 6,
    right = 7,
    a = 8,
    x = 9,
    l1 = 10,
    r1 = 11,
    l2 = 12,
    r2 = 13,
    l3 = 14,
    r3 = 15,
};

/// Text size dimensions.
pub const TextSize = struct {
    width: u32,
    height: u32,
};

pub const Vector2 = struct {
    x: f32,
    y: f32,

    pub fn new(x: f32, y: f32) Vector2 {
        return .{ .x = x, .y = y };
    }

    pub fn add(self: *Vector2, other: Vector2) void {
        self.x += other.x;
        self.y += other.y;
    }

    pub fn sub(self: *Vector2, other: Vector2) void {
        self.x -= other.x;
        self.y -= other.y;
    }

    pub fn mult(self: *Vector2, n: f32) void {
        self.x *= n;
        self.y *= n;
    }

    pub fn div(self: *Vector2, n: f32) void {
        if (n != 0) {
            self.x /= n;
            self.y /= n;
        }
    }

    pub fn mag(self: Vector2) f32 {
        return sys.wasm96_math_mag(self.x, self.y);
    }

    pub fn dist(self: Vector2, other: Vector2) f32 {
        return sys.wasm96_math_dist(self.x, self.y, other.x, other.y);
    }

    pub fn dot(self: Vector2, other: Vector2) f32 {
        return self.x * other.x + self.y * other.y;
    }

    pub fn normalize(self: *Vector2) void {
        const m = self.mag();
        if (m != 0) self.div(m);
    }

    pub fn limit(self: *Vector2, max: f32) void {
        if (self.mag() > max) {
            self.normalize();
            self.mult(max);
        }
    }

    pub fn heading(self: Vector2) f32 {
        return sys.wasm96_math_atan2(self.y, self.x);
    }

    pub fn rotate(self: *Vector2, angle: f32) void {
        const c = sys.wasm96_math_cos(angle);
        const s = sys.wasm96_math_sin(angle);
        const nx = self.x * c - self.y * s;
        const ny = self.x * s + self.y * c;
        self.x = nx;
        self.y = ny;
    }

    pub fn lerp(self: *Vector2, target: Vector2, amt: f32) void {
        self.x = sys.wasm96_math_lerp(self.x, target.x, amt);
        self.y = sys.wasm96_math_lerp(self.y, target.y, amt);
    }
};

pub const Vector3 = struct {
    x: f32,
    y: f32,
    z: f32,

    pub fn new(x: f32, y: f32, z: f32) Vector3 {
        return .{ .x = x, .y = y, .z = z };
    }

    pub fn add(self: *Vector3, other: Vector3) void {
        self.x += other.x;
        self.y += other.y;
        self.z += other.z;
    }

    pub fn sub(self: *Vector3, other: Vector3) void {
        self.x -= other.x;
        self.y -= other.y;
        self.z -= other.z;
    }

    pub fn mult(self: *Vector3, n: f32) void {
        self.x *= n;
        self.y *= n;
        self.z *= n;
    }

    pub fn div(self: *Vector3, n: f32) void {
        if (n != 0) {
            self.x /= n;
            self.y /= n;
            self.z /= n;
        }
    }

    pub fn mag(self: Vector3) f32 {
        return sys.wasm96_math_sqrt(self.x * self.x + self.y * self.y + self.z * self.z);
    }

    pub fn dot(self: Vector3, other: Vector3) f32 {
        return self.x * other.x + self.y * other.y + self.z * other.z;
    }

    pub fn cross(self: Vector3, other: Vector3) Vector3 {
        return .{
            .x = self.y * other.z - self.z * other.y,
            .y = self.z * other.x - self.x * other.z,
            .z = self.x * other.y - self.y * other.x,
        };
    }

    pub fn normalize(self: *Vector3) void {
        const m = self.mag();
        if (m != 0) self.div(m);
    }

    pub fn lerp(self: *Vector3, target: Vector3, amt: f32) void {
        self.x = sys.wasm96_math_lerp(self.x, target.x, amt);
        self.y = sys.wasm96_math_lerp(self.y, target.y, amt);
        self.z = sys.wasm96_math_lerp(self.z, target.z, amt);
    }
};

/// Low-level raw ABI imports.
pub const sys = struct {
    // Graphics
    extern fn wasm96_graphics_set_size(width: u32, height: u32) void;
    extern fn wasm96_graphics_set_color(r: u32, g: u32, b: u32, a: u32) void;
    extern fn wasm96_graphics_background(r: u32, g: u32, b: u32) void;
    extern fn wasm96_graphics_point(x: i32, y: i32) void;
    extern fn wasm96_graphics_line(x1: i32, y1: i32, x2: i32, y2: i32) void;
    extern fn wasm96_graphics_rect(x: i32, y: i32, w: u32, h: u32) void;
    extern fn wasm96_graphics_rect_outline(x: i32, y: i32, w: u32, h: u32) void;
    extern fn wasm96_graphics_circle(x: i32, y: i32, r: u32) void;
    extern fn wasm96_graphics_circle_outline(x: i32, y: i32, r: u32) void;
    extern fn wasm96_graphics_image(x: i32, y: i32, w: u32, h: u32, ptr: [*]const u8, len: usize) void;
    extern fn wasm96_graphics_image_png(x: i32, y: i32, ptr: [*]const u8, len: usize) void;
    extern fn wasm96_graphics_image_jpeg(x: i32, y: i32, ptr: [*]const u8, len: usize) void;
    extern fn wasm96_graphics_ellipse(cx: i32, cy: i32, w: u32, h: u32) void;
    extern fn wasm96_graphics_arc(cx: i32, cy: i32, w: u32, h: u32, start: f32, end: f32) void;
    extern fn wasm96_graphics_quad(x1: i32, y1: i32, x2: i32, y2: i32, x3: i32, y3: i32, x4: i32, y4: i32) void;
    extern fn wasm96_graphics_triangle(x1: i32, y1: i32, x2: i32, y2: i32, x3: i32, y3: i32) void;
    extern fn wasm96_graphics_triangle_outline(x1: i32, y1: i32, x2: i32, y2: i32, x3: i32, y3: i32) void;
    extern fn wasm96_graphics_bezier_quadratic(x1: i32, y1: i32, cx: i32, cy: i32, x2: i32, y2: i32, segments: u32) void;
    extern fn wasm96_graphics_bezier_cubic(x1: i32, y1: i32, cx1: i32, cy1: i32, cx2: i32, cy2: i32, x2: i32, y2: i32, segments: u32) void;
    extern fn wasm96_graphics_pill(x: i32, y: i32, w: u32, h: u32) void;
    extern fn wasm96_graphics_pill_outline(x: i32, y: i32, w: u32, h: u32) void;

    extern fn wasm96_graphics_apply_matrix(m00: f32, m01: f32, m02: f32, m03: f32, m10: f32, m11: f32, m12: f32, m13: f32, m20: f32, m21: f32, m22: f32, m23: f32, m30: f32, m31: f32, m32: f32, m33: f32) void;
    extern fn wasm96_graphics_reset_matrix() void;
    extern fn wasm96_graphics_rotate(angle: f32) void;
    extern fn wasm96_graphics_rotate_x(angle: f32) void;
    extern fn wasm96_graphics_rotate_y(angle: f32) void;
    extern fn wasm96_graphics_rotate_z(angle: f32) void;
    extern fn wasm96_graphics_scale(sx: f32, sy: f32, sz: f32) void;
    extern fn wasm96_graphics_shear_x(angle: f32) void;
    extern fn wasm96_graphics_shear_y(angle: f32) void;
    extern fn wasm96_graphics_translate(x: f32, y: f32, z: f32) void;
    extern fn wasm96_graphics_push_matrix() void;
    extern fn wasm96_graphics_pop_matrix() void;

    // 3D Graphics
    extern fn wasm96_graphics_set_3d(enable: u32) void;
    extern fn wasm96_graphics_camera_look_at(eye_x: f32, eye_y: f32, eye_z: f32, target_x: f32, target_y: f32, target_z: f32, up_x: f32, up_y: f32, up_z: f32) void;
    extern fn wasm96_graphics_camera_perspective(fovy: f32, aspect: f32, near: f32, far: f32) void;
    extern fn wasm96_graphics_mesh_create(key: u64, v_ptr: [*]const f32, v_len: usize, i_ptr: [*]const u32, i_len: usize) u32;
    extern fn wasm96_graphics_mesh_create_obj(key: u64, ptr: [*]const u8, len: usize) u32;
    extern fn wasm96_graphics_mesh_create_stl(key: u64, ptr: [*]const u8, len: usize) u32;
    extern fn wasm96_graphics_mesh_draw(key: u64, x: f32, y: f32, z: f32, rx: f32, ry: f32, rz: f32, sx: f32, sy: f32, sz: f32) void;
    extern fn wasm96_graphics_mesh_set_texture(mesh_key: u64, image_key: u64) u32;

    // Materials / textures (OBJ+MTL workflows)
    extern fn wasm96_graphics_mtl_register_texture(
        texture_key: u64,
        mtl_ptr: u32,
        mtl_len: u32,
        tex_filename_ptr: u32,
        tex_filename_len: u32,
        tex_ptr: u32,
        tex_len: u32,
    ) u32;

    extern fn wasm96_graphics_svg_register(key: u64, data_ptr: [*]const u8, data_len: usize) u32;
    extern fn wasm96_graphics_svg_draw_key(key: u64, x: i32, y: i32, w: u32, h: u32) void;
    extern fn wasm96_graphics_svg_unregister(key: u64) void;

    extern fn wasm96_graphics_gif_register(key: u64, data_ptr: [*]const u8, data_len: usize) u32;
    extern fn wasm96_graphics_gif_draw_key(key: u64, x: i32, y: i32) void;
    extern fn wasm96_graphics_gif_draw_key_scaled(key: u64, x: i32, y: i32, w: u32, h: u32) void;
    extern fn wasm96_graphics_gif_unregister(key: u64) void;

    extern fn wasm96_graphics_mtl_register(key: u64, data_ptr: [*]const u8, data_len: usize) u32;
    extern fn wasm96_graphics_png_register(key: u64, data_ptr: [*]const u8, data_len: usize) u32;
    extern fn wasm96_graphics_png_draw_key(key: u64, x: i32, y: i32) void;
    extern fn wasm96_graphics_png_draw_key_scaled(key: u64, x: i32, y: i32, w: u32, h: u32) void;
    extern fn wasm96_graphics_png_unregister(key: u64) void;

    extern fn wasm96_graphics_jpeg_register(key: u64, data_ptr: [*]const u8, data_len: usize) u32;
    extern fn wasm96_graphics_jpeg_draw_key(key: u64, x: i32, y: i32) void;
    extern fn wasm96_graphics_jpeg_draw_key_scaled(key: u64, x: i32, y: i32, w: u32, h: u32) void;
    extern fn wasm96_graphics_jpeg_unregister(key: u64) void;

    extern fn wasm96_graphics_font_register_ttf(key: u64, data_ptr: [*]const u8, data_len: usize) u32;
    extern fn wasm96_graphics_font_register_bdf(key: u64, data_ptr: [*]const u8, data_len: usize) u32;
    extern fn wasm96_graphics_font_register_spleen(key: u64, size: u32) u32;
    extern fn wasm96_graphics_font_unregister(key: u64) void;
    extern fn wasm96_graphics_text_key(x: i32, y: i32, font_key: u64, text_ptr: [*]const u8, text_len: usize) void;
    extern fn wasm96_graphics_text_measure_key(font_key: u64, text_ptr: [*]const u8, text_len: usize) u64;

    // Input
    extern fn wasm96_input_is_button_down(port: u32, btn: u32) u32;
    extern fn wasm96_input_set_mode(mode: u32) void;
    extern fn wasm96_input_is_key_down(key: u32) u32;
    extern fn wasm96_input_get_mouse_x() i32;
    extern fn wasm96_input_get_mouse_y() i32;
    extern fn wasm96_input_is_mouse_down(btn: u32) u32;

    // Audio
    extern fn wasm96_audio_init(sample_rate: u32) u32;
    extern fn wasm96_audio_push_samples(ptr: [*]const i16, len: usize) void;
    extern fn wasm96_audio_play_wav(ptr: [*]const u8, len: usize) void;
    extern fn wasm96_audio_play_qoa(ptr: [*]const u8, len: usize) void;
    extern fn wasm96_audio_play_xm(ptr: [*]const u8, len: usize) void;

    // System
    extern fn wasm96_storage_save(key: u64, data_ptr: [*]const u8, data_len: usize) void;
    extern fn wasm96_storage_load(key: u64) u64;
    extern fn wasm96_storage_free(ptr: [*]const u8, len: usize) void;

    extern fn wasm96_system_log(ptr: [*]const u8, len: u32) void;
    extern fn wasm96_system_millis() u64;
    extern fn wasm96_system_day() u32;
    extern fn wasm96_system_hour() u32;
    extern fn wasm96_system_minute() u32;
    extern fn wasm96_system_month() u32;
    extern fn wasm96_system_second() u32;
    extern fn wasm96_system_year() u32;

    // Math - Calculation
    extern fn wasm96_math_abs(n: f32) f32;
    extern fn wasm96_math_ceil(n: f32) f32;
    extern fn wasm96_math_constrain(n: f32, low: f32, high: f32) f32;
    extern fn wasm96_math_dist(x1: f32, y1: f32, x2: f32, y2: f32) f32;
    extern fn wasm96_math_exp(n: f32) f32;
    extern fn wasm96_math_floor(n: f32) f32;
    extern fn wasm96_math_fract(n: f32) f32;
    extern fn wasm96_math_lerp(start: f32, stop: f32, amt: f32) f32;
    extern fn wasm96_math_log(n: f32) f32;
    extern fn wasm96_math_mag(x: f32, y: f32) f32;
    extern fn wasm96_math_map(value: f32, start1: f32, stop1: f32, start2: f32, stop2: f32) f32;
    extern fn wasm96_math_max(a: f32, b: f32) f32;
    extern fn wasm96_math_min(a: f32, b: f32) f32;
    extern fn wasm96_math_norm(value: f32, start: f32, stop: f32) f32;
    extern fn wasm96_math_pow(n: f32, e: f32) f32;
    extern fn wasm96_math_round(n: f32) f32;
    extern fn wasm96_math_sq(n: f32) f32;
    extern fn wasm96_math_sqrt(n: f32) f32;
